--- a/src/main/resources/templates/sample.html
+++ b/src/main/resources/templates/sample.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>Thymeleaf 예제</title>
-</head>
-<body>
-<h1>Thymeleaf 예제</h1>
-<span th:text="${user.userId}"></span><br/>
-<span th:text="${user.name}"></span><br/>
-<span th:text="${user.authType}"></span><br/>
-</body>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="layout/default">
+
+<!-- 사용자 CSS 추가 -->
+<th:block layout:fragment="css">
+</th:block>
+
+<!-- 사용자 스크립트 추가 -->
+<th:block layout:fragment="script">
+</th:block>
+
+<div layout:fragment="content" >
+    <h1>Thymeleaf 예제 2</h1>
+    <span th:text="${user.userId}"></span><br/>
+    <span th:text="${user.name}"></span><br/>
+    <span th:text="${user.authType}"></span><br/>
+</div>
 </html>
