- thymeleaf fragment namespace 변경

--- a/src/main/resources/templates/fragments/config.html
+++ b/src/main/resources/templates/fragments/config.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
-<head th:fragment="configFragment">
+<configFragment th:fragment="configFragment">
     <meta charset="UTF-8" />
     <link href="/css/bootstrap-4.4.1/bootstrap.css" rel="stylesheet"/>
     <link href="/css/base.css" rel="stylesheet"/>
@@ -14,6 +14,6 @@
 
     <script src="/js/default.js"></script>
     <th:block layout:fragment="script"></th:block>
-</head>
+</configFragment>
 
 </html>
