--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<footer th:fragment="footerFragment">
+<footerFragment th:fragment="footerFragment">
     Layout Common Footer
-</footer>
+</footerFragment>
 </html>
