--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -2,12 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
-    <head th:replace="fragments/config :: configFragment"></head>
+    <configFragment th:replace="fragments/config :: configFragment"></configFragment>
 
-    <nav th:replace="fragments/nav :: navFragment"></nav>
+    <navFragment th:replace="fragments/nav :: navFragment"></navFragment>
 
     <div layout:fragment="content"></div>
 
-    <footer th:replace="fragments/footer:: footerFragment"></footer>
+    <footerFragment th:replace="fragments/footer:: footerFragment"></footerFragment>
 
 </html>
