- footer 기본정보 변경 및 기본 CSS 적용

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <footerFragment th:fragment="footerFragment">
-    Layout Common Footer
+    <div class="footer">FOOTER</div>
 </footerFragment>
 </html>
