- content 기본 CSS 적용

--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -6,7 +6,7 @@
 
     <navFragment th:replace="fragments/nav :: navFragment"></navFragment>
 
-    <div layout:fragment="content"></div>
+    <div layout:fragment="content" class="container"></div>
 
     <footerFragment th:replace="fragments/footer:: footerFragment"></footerFragment>
 
