--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -1,6 +1,40 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <navFragment th:fragment="navFragment">
-    nav div
+    <script>
+        $(function () {
+            var currentMenu = $("#currentMenu").val();
+            $(".nav-item").each(function() {
+                checkAndRemoveClass($(this), "active");
+                if($(this).attr("data-menu") == currentMenu) {
+                    $(this).addClass("active");
+                }
+            });
+        });
+    </script>
+    <input type="hidden" id="currentMenu" name="currentMenu" th:value="${currentMenu}" />
+    <nav class="navbar navbar-dark bg-dark">
+        <a class="navbar-brand" href="/busList">BusTrace</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item" data-menu="1">
+                    <a class="nav-link" href="/busList">노선목록</a>
+                </li>
+                <li class="nav-item" data-menu="3">
+                    <a class="nav-link" href="/busMng/busMngList">노선관리</a>
+                </li>
+                <li class="nav-item" data-menu="6">
+                    <a class="nav-link">시스템관리</a>
+                </li>
+                <li class="nav-item" data-menu="7">
+                    <a class="nav-link" href="/codeMng/codeList">- 코드관리</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 </navFragment>
 </html>
