--- a/src/main/resources/templates/fragments/title.html
+++ b/src/main/resources/templates/fragments/title.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<titleFragment th:fragment="titleFragment">
+<titleFragment th:fragment="titleFragment(title)">
 
     <div class="rounded-lg alert-secondary doc-title" role="alert" style="margin-top:15px;">
         <div class="d-flex mb-3 justify-content-center">
