--- a/src/main/resources/templates/fragments/config.html
+++ b/src/main/resources/templates/fragments/config.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:fragment="configFragment"><meta charset="UTF-8" />
+<head th:fragment="configFragment">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="/css/bootstrap-4.4.1/bootstrap.css" rel="stylesheet"/>
     <link href="/css/base.css" rel="stylesheet"/>
