--- a/src/main/resources/templates/busList/list.html
+++ b/src/main/resources/templates/busList/list.html
@@ -22,7 +22,7 @@
         <tbody>
             <tr th:each="route: ${routes}">
                 <th scope="row" th:text="${routeStat.index + 1}"></th>
-                <td><a th:href="@{/routeInfo(id=${route.id})}" th:text="${route.routeName}"></a></td>
+                <td><a th:href="@{/route/info(id=${route.id})}" th:text="${route.routeName}"></a></td>
                 <td><span class="badge badge-light tripplan-tot-count" th:text="${route.totalTripPlanCount}"></span></td>
                 <td><span class="badge badge-light tripplan-div-count" th:text="${route.yesterdayTripRecordCount}"></span></td>
                 <td><span class="badge badge-light tripplan-div-count"  th:text="${route.todayTripRecordCount}"></span></td>
