--- a/src/main/resources/templates/busList/routeInfo.html
+++ b/src/main/resources/templates/busList/routeInfo.html
@@ -45,7 +45,265 @@
         </ul>
     </div>
 
-    <div id="stationsTabArea" style="display: none;">
+    <div id="stationsTabArea" style="display: block;">
+        <script>
+            var createdAtOldVal = "";
+            $(document).ready(function() {
+                createdAtOldVal = $("#createdAt").val();
+                $("#createdAt").on("propertychange change keyup paste input", function() {
+                    resetSearchDivRadio();
+                });
+                resetStations('location-list');
+            });
+
+            var stationTotalCnt = 0;
+            var returnStationCnt = 0;
+            function updateProgress() {
+                returnStationCnt = returnStationCnt + 1;
+                var percente = parseInt((returnStationCnt / stationTotalCnt) * 100);
+                $(".progress-bar").css("width", percente + "%");
+                if (returnStationCnt == stationTotalCnt) {
+                    setTimeout(function(){
+                        $(".progress-area").css("display", "none");
+                    }, 1000);
+                }
+            }
+
+            function resetSearchDivRadio() {
+                var currentVal = $(".createdAt").val();
+                if(currentVal == createdAtOldVal) {
+                    return;
+                }
+
+                if (isToday()) {
+                    $(".search-div").css("display", "block");
+                } else {
+                    $(".search-div").css("display", "none");
+                }
+
+                $(".search-div input").each(function(){
+                    $(this).prop("checked", false);
+                    if (isToday() && $(this).attr("data-search-div") == "today") {
+                        $(this).prop("checked", true);
+                    }
+                });
+            }
+
+            function resetStations(targetClassName) {
+                $.ajax({
+                    method: "GET",
+                    url: "/route/stations",
+                    data: {
+                        routeId : $("#routeId").val()
+                    }
+                })
+                .done(function(data) {
+                    createStationList(data);
+
+                    if (isToday()) {
+                        btnToday();
+                    } else {
+                        btnAll();
+                    }
+                })
+                .fail(function() {
+                    alert("error");
+                });
+            }
+
+            function createLocationList(stationId, stationSeq) {
+                var routeId = $("#routeId").val();
+                var createdAt = $("#createdAt").val();
+
+                $.ajax({
+                    method: "GET",
+                    url: "/route/locations",
+                    data: {
+                        routeId: routeId,
+                        stationId: stationId,
+                        stationSeq: stationSeq,
+                        createdAt: createdAt
+                    }
+                })
+                .done(function(data) {
+                    showLocationList($("#station-" + stationId + "-location-list"), data);
+                })
+                .fail(function() {
+                    alert("error");
+                });
+            }
+
+            function createStationList(data) {
+                var ul = $("#stationList");
+                $("#stationList").text("");
+                ul.addClass("station-list");
+
+                var stations = JSON.parse(data);
+                var stationsLen = stations.length;
+                stationTotalCnt = stationsLen;
+                for (var i=0; i<stationsLen; i++) {
+                    var station = stations[i];
+                    var stationId = station.stationId;
+                    var stationSeq = station.stationSeq;
+                    var stationName = station.stationName;
+
+                    var li = document.createElement("li");
+                    li.setAttribute("id", "station-" + stationId);
+                    li.setAttribute("class", "station-list-item align-middle");
+                    li.setAttribute("data-station-id", stationId);
+                    li.setAttribute("data-station-seq", stationSeq);
+                    ul.append(li);
+
+                    var divStation = document.createElement("div");
+                    divStation.setAttribute("class", "clearfix");
+                    li.append(divStation);
+
+                    var divStationName = document.createElement("div");
+                    divStationName.setAttribute("class", "float-left");
+                    divStationName.innerText = stationName;
+                    divStation.append(divStationName);
+
+                    var buttonGroup = document.createElement("div");
+                    buttonGroup.setAttribute("class", "btn-group btn-group-toggle btn-group-sm float-right");
+                    buttonGroup.setAttribute("role", "group");
+                    divStation.append(buttonGroup);
+
+                    var divLocations = document.createElement("div");
+                    divLocations.setAttribute("id", "station-" + stationId + "-location-list");
+                    divLocations.setAttribute("class", "location-list close");
+                    divLocations.setAttribute("data-station-id", stationId);
+                    divLocations.innerText = "개발대기 - ALL 먼저 합니다.";
+                    li.append(divLocations);
+                }
+            }
+
+            function showLocationList(targetObj, data) {
+                var html = "<ul>";
+                var locations = JSON.parse(data);
+                var locationsLength = locations.length;
+                for (var i=0; i<locationsLength; i++) {
+                    var location = locations[i];
+                    var routeId = location.routeId;
+                    var plateNo = location.plateNo;
+                    var plateType = location.plateType;
+                    var remainSeatCnt = location.remainSeatCnt;
+                    var createdAt = location.createdAt;
+
+                    var plateNoLen = plateNo.length;
+                    if (plateNoLen >= 4) {
+                        plateNo = plateNo.substr(plateNoLen-4, plateNoLen);
+                    }
+
+                    var createdAtLen = createdAt.length;
+                    if (createdAtLen >= 8) {
+                        createdAt = createdAt.substr(createdAtLen-8, createdAtLen);
+                    }
+
+                    var classInfo = "location-item";
+
+                    if (i == 0) {
+                        classInfo = classInfo + " border-top";
+                    }
+                    if (i < locationsLength-1) {
+                        classInfo = classInfo + " border-bottom";
+                    }
+
+                    var remainSeatCntInt = parseInt(remainSeatCnt);
+                    if (remainSeatCntInt == 0) {
+                        classInfo = classInfo + " seat-zero";
+                    } else if (remainSeatCntInt <= 10) {
+                        classInfo = classInfo + " seat-ten";
+                    }
+
+                    var item = "";
+                    item = item + "<li class='" + classInfo + "'>";
+                    item = item + "<span>" + createdAt + "</span>";
+                    item = item + "<span class='location-list-item-bar'>|</span>";
+                    item = item + "<span>" + plateType + "</span>";
+                    item = item + "<span class='location-list-item-bar'>|</span>";
+                    item = item + "<span>" + plateNo + "</span>";
+                    item = item + "<span class='location-list-item-bar'>|</span>";
+                    item = item + "<span>" + remainSeatCnt + "</span>";
+                    item = item + "</li>";
+
+                    html = html + item.toString();
+                }
+                html = html + "</ul>";
+                $(targetObj).html("");
+                $(targetObj).html(html);
+
+                checkAndRemoveClass($(targetObj), "close");
+                $(targetObj).addClass("open");
+
+                updateProgress();
+            }
+
+            function showLocationListAll() {
+                returnStationCnt = 0;
+                $(".progress-bar").css("width", "0");
+                $(".progress-area").css("display", "block");
+
+                $(".location-list").each(function() {
+                    var stationId = $(this).attr("data-station-id");
+                    var stationSeq = $(this).attr("data-station-seq");
+                    createLocationList(stationId, stationSeq);
+                });
+            }
+
+            function isToday() {
+                var searchCreatedAt = $("#createdAt").val();
+
+                var now = new Date();
+                var nowYear = now.getFullYear();
+                var month = now.getMonth() + 1;
+                var day = now.getDate();
+
+                var nowStr = nowYear + "-" + ((month < 10) ? "0" + month : month) + "-" + day;
+
+                if (nowStr == searchCreatedAt) {
+                    return true;
+                }
+                return false;
+            }
+            function btnToday() {
+                alert("개발대기중 - ALL 먼저 진행 합니다.");
+            }
+            function btnAll() {
+                showLocationListAll();
+                // var stationId= $(this).attr("data-station-id");
+                // var stationSeq= $(this).attr("data-station-seq");
+                // createLocationList(stationId, stationSeq);
+            }
+        </script>
+        <form name="searchForm" id="searchForm">
+            <input type="hidden" id="routeId" name="routeId" th:value="${route.routeId}" />
+            <div class="form-row topPadding">
+                <div class="form-group">
+                    <input class="form-control form-control-sm" type="date" id="createdAt" name="createdAt" th:value="${createdAt}" >
+                </div>
+                <div class="form-group" style="width: 4px">
+                </div>
+                <div class="form-group">
+                    <button type="button" class="btn btn-primary btn-sm " onclick="resetStations('location-list')">Search</button>
+                </div>
+            </div>
+            <div class="btn-group btn-group-toggle btn-group-sm search-div bottomPadding" data-toggle="buttons">
+                <label class="btn btn-secondary active" data-search-div="today">
+                    <input type="radio" name="searchDiv" id="searchDiv_today" data-search-div="today" onclick="btnToday()" checked> Today
+                </label>
+                <label class="btn btn-secondary" data-search-div="all">
+                    <input type="radio" name="searchDiv" id="searchDiv_all" onclick="btnAll()" data-search-div="all"> All
+                </label>
+            </div>
+        </form>
+        <div class="progress-area bottomPadding" style="display: none;">
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0"></div>
+            </div>
+        </div>
+        <div>
+            <ul id="stationList"></ul>
+        </div>
     </div>
 
     <div id="specialInfoTabArea" style="display: none;"
