--- a/src/main/resources/static/css/base.css
+++ b/src/main/resources/static/css/base.css
@@ -42,19 +42,18 @@
 }
 .location-list ul {
     list-style: none;
-    margin-top: 0px;
-    margin-left: 10px;
-    margin-right: 0px;
-    margin-bottom: 0px;
-    padding-top: 5px;
-    padding-left: 5px;
-    padding-right: 5px;
-    padding-bottom: 5px;
+    margin: 0px;
+    padding: 0px;
 }
 .location-list li {
     list-style: none;
     margin: 0px;
-    padding: 0px;
+    padding-right: 0px;
+    padding-bottom: 0px;
+    padding-left: 5px;
+    padding-top: 0px;
+    background-color: #eeeeee;
+    font-size: 0.9em;
 }
 .location-list-item-bar {
     padding-left:3px; padding-right:3px; color:gray;
