--- a/src/main/resources/templates/busList/routeInfo.html
+++ b/src/main/resources/templates/busList/routeInfo.html
@@ -56,15 +56,20 @@
                 resetStations('location-list');
             });
 
-            var stationTotalCnt = 0;
+            var totalStationCnt = 0;
             var returnStationCnt = 0;
+            var returnStationFailCnt = 0;
             function updateProgress() {
                 returnStationCnt = returnStationCnt + 1;
-                var percente = parseInt((returnStationCnt / stationTotalCnt) * 100);
+                var percente = parseInt((returnStationCnt / totalStationCnt) * 100);
                 $(".progress-bar").css("width", percente + "%");
-                if (returnStationCnt == stationTotalCnt) {
+                if (returnStationCnt == totalStationCnt) {
                     setTimeout(function(){
                         $(".progress-area").css("display", "none");
+                        if (returnStationFailCnt > 0) {
+                            alert("조회 중 에러가 발생 했습니다.");
+                            return;
+                        }
                     }, 1000);
                 }
             }
@@ -111,7 +116,8 @@
                     showLocationList($("#station-" + stationId + "-location-list"), data);
                 })
                 .fail(function() {
-                    alert("error");
+                    returnStationFailCnt++;
+                    updateProgress();
                 });
             }
 
@@ -122,7 +128,7 @@
 
                 var stations = JSON.parse(data);
                 var stationsLen = stations.length;
-                stationTotalCnt = stationsLen;
+                totalStationCnt = stationsLen;
                 for (var i=0; i<stationsLen; i++) {
                     var station = stations[i];
                     var stationId = station.stationId;
