- edit footer text

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <footerFragment th:fragment="footerFragment">
-    <div class="footer">FOOTER</div>
+    <div class="footer">dazzilove's Bus Trace (2019~2020)</div>
 </footerFragment>
 </html>
