--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -24,15 +24,15 @@
                 <li class="nav-item" data-menu="1">
                     <a class="nav-link" href="/busList">노선목록</a>
                 </li>
-                <li class="nav-item" data-menu="3">
-                    <a class="nav-link" href="/busMng/busMngList">노선관리</a>
-                </li>
-                <li class="nav-item" data-menu="6">
-                    <a class="nav-link">시스템관리</a>
-                </li>
-                <li class="nav-item" data-menu="7">
-                    <a class="nav-link" href="/codeMng/codeList">- 코드관리</a>
-                </li>
+                <!--<li class="nav-item" data-menu="3">-->
+                    <!--<a class="nav-link" href="/busMng/busMngList">노선관리</a>-->
+                <!--</li>-->
+                <!--<li class="nav-item" data-menu="6">-->
+                    <!--<a class="nav-link">시스템관리</a>-->
+                <!--</li>-->
+                <!--<li class="nav-item" data-menu="7">-->
+                    <!--<a class="nav-link" href="/codeMng/codeList">- 코드관리</a>-->
+                <!--</li>-->
             </ul>
         </div>
     </nav>
