--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -27,12 +27,12 @@
                 <li class="nav-item" data-menu="3">
                     <a class="nav-link" href="/busMng/routeList">노선관리</a>
                 </li>
-                <!--<li class="nav-item" data-menu="6">-->
-                    <!--<a class="nav-link">시스템관리</a>-->
-                <!--</li>-->
-                <!--<li class="nav-item" data-menu="7">-->
-                    <!--<a class="nav-link" href="/codeMng/codeList">- 코드관리</a>-->
-                <!--</li>-->
+                <li class="nav-item" data-menu="6">
+                    <a class="nav-link">시스템관리</a>
+                </li>
+                <li class="nav-item" data-menu="7">
+                    <a class="nav-link" href="/codeMng/codeList">- 코드관리</a>
+                </li>
             </ul>
         </div>
     </nav>
