- 버스 아이콘 노출 관련 수정

--- a/src/main/resources/templates/busList/routeInfo.html
+++ b/src/main/resources/templates/busList/routeInfo.html
@@ -224,7 +224,8 @@
 
                     var item = "";
                     item = item + "<li class='" + classInfo + "'>";
-                    item = item + "<span>" + plateTypeIconUrl + "</span>";
+                    item = item + "<span><img src='" + plateTypeIconUrl + "' class='plate-type-icon'></span>";
+                    item = item + "<span class='location-list-item-bar'>|</span>";
                     item = item + "<span>" + plateNo + "(" + plateTypeTemp + ")" + "</span>";
                     item = item + "<span class='location-list-item-bar'>|</span>";
                     item = item + "<span>" + createdAt.substr(0, 5) + "</span>";
